--- a/pwa/public/manifest.json
+++ b/pwa/public/manifest.json
@@ -1,25 +1,31 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Chatastrophe",
+  "name": "Chatastrophe",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src":"../src/assests/images/icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+    { 
+      "src": "../src/assests/images/icon-256.png", 
+      "sizes": "256x256", 
+      "type": "image/png" 
+    }, 
+    { 
+      "src": "../src/assests/images/icon-384.png", 
+      "sizes": "384x384", 
+      "type": "image/png" 
+    }, 
+    { 
+      "src": "../src/assests/images/icon-512.png", 
+      "sizes": "512x512", 
+      "type": "image/png" 
     }
   ],
-  "start_url": ".",
+  
+  "start_url": "/?utm_source=homescreen",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#e05a47",
+  "background_color": "#e05a47"
 }
